--- a/backend/recipegenius/config-server/src/main/resources/configurations/client-service.yml
+++ b/backend/recipegenius/config-server/src/main/resources/configurations/client-service.yml
@@ -18,3 +18,8 @@ spring:
     baseline-version: 0
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: "http://localhost:9090/realms/recipegenius"
