--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -29,6 +29,19 @@ services:
       - microservices-net
     restart: unless-stopped
 
+  keycloak:
+    container_name: keycloak-bsn
+    image: quay.io/keycloak/keycloak:24.0.2
+    ports:
+      - 9090:8080
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    networks:
+      - microservices-net
+    command:
+      - "start-dev"  
+
 networks:
   microservices-net:
     driver: bridge
