auth refactor + exception handler add

--- a/backend/recipegenius/config-server/src/main/resources/configurations/auth-service.yml
+++ b/backend/recipegenius/config-server/src/main/resources/configurations/auth-service.yml
@@ -3,7 +3,7 @@ server:
 keycloak:
   auth-server-url: http://localhost:9090
   realm: recipegenius
-  resource: recipegenius
+  client: recipegenius
   credentials:
     secret: ASaKrOhvMgkwa5OoYfm6Wnjil7paHpCt
   admin:
