--- a/backend/recipegenius/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/backend/recipegenius/config-server/src/main/resources/configurations/gateway-service.yml
@@ -15,6 +15,10 @@ spring:
           uri: lb://AUTH-SERVICE
           predicates:
             - Path=/api/v1/auth/**
+        - id: recipe-service
+          uri: lb://RECIPE-SERVICE
+          predicates:
+            - Path=/api/v1/recipe/**
   security:
     oauth2:
       resourceserver:
