--- a/backend/recipegenius/config-server/src/main/resources/configurations/recipe-service.yml
+++ b/backend/recipegenius/config-server/src/main/resources/configurations/recipe-service.yml
@@ -9,6 +9,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
