--- a/db/docker-compose copy.yml
+++ b/db/docker-compose copy.yml
@@ -30,10 +30,13 @@ services:
     restart: unless-stopped
 
   keycloak:
-    container_name: keycloak-bsn2
-    image: s22695/keycloak-inz:v1.0
+    container_name: keycloak-bsn
+    image: quay.io/keycloak/keycloak:24.0.2
     ports:
       - 9090:8080
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
     networks:
       - microservices-net
     command:
