--- a/backend/recipegenius/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/backend/recipegenius/config-server/src/main/resources/configurations/gateway-service.yml
@@ -19,6 +19,10 @@ spring:
           uri: lb://RECIPE-SERVICE
           predicates:
             - Path=/api/v1/recipe/**
+        - id: user-data
+          uri: lb://USER-DATA
+          predicates:
+            - Path=/api/v1/user-ingredient/**,/api/v1/user-recipe/**
   security:
     oauth2:
       resourceserver:
